NetBSD Problem Report #50947

From www@NetBSD.org  Fri Mar 11 17:12:37 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 39D0E7ACB9
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 11 Mar 2016 17:12:37 +0000 (UTC)
Message-Id: <20160311171236.617167ACC7@mollari.NetBSD.org>
Date: Fri, 11 Mar 2016 17:12:36 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/compat/common/kern_time_50.c:296]: (style) Suspicious condition
X-Send-Pr-Version: www-1.0

>Number:         50947
>Category:       kern
>Synopsis:       src/sys/compat/common/kern_time_50.c:296]: (style) Suspicious condition
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Mar 11 17:15:00 +0000 2016
>Closed-Date:    Sat Mar 12 02:10:26 +0000 2016
>Last-Modified:  Sat Mar 12 02:10:26 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160311
>Organization:
>Environment:
>Description:
src/sys/compat/common/kern_time_50.c:296]: (style) Suspicious condition (assignment + comparison); Clarify expression with parentheses.


Source code is


    if (itvp &&
        (error = copyin(itvp, &aitv50, sizeof(aitv50)) != 0))

Maybe better code

      if (itvp &&
        ((error = copyin(itvp, &aitv50, sizeof(aitv50))) != 0))





>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50947 CVS commit: src/sys/compat/common
Date: Fri, 11 Mar 2016 13:32:29 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Fri Mar 11 18:32:29 UTC 2016

 Modified Files:
 	src/sys/compat/common: kern_time_50.c

 Log Message:
 PR/50947: David Binderman: sprinkle parens


 To generate a diff of this commit:
 cvs rdiff -u -r1.30 -r1.31 src/sys/compat/common/kern_time_50.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 12 Mar 2016 02:10:26 +0000
State-Changed-Why:
Christos committed it


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.